--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
   "packaging>=23.0,<26.0",
   "torchdata>=0.8.0,<1.0",
   "tiktoken>=0.9.0",
-  "diffusers>=0.30.0,<=0.31.0",
+  "diffusers>=0.36.0",
   "transformers==4.57.3",
   "psutil",
   "timm",
